Fixing status roll gap

--- a/src/src/css/main.css
+++ b/src/src/css/main.css
@@ -374,10 +374,17 @@ h1 + .rss-header, h2 + .rss-header, h3 + .rss-header, h4 + .rss-header, h5 + .rs
   margin-block-start: 0;
 }
 
+.status-roll {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  gap: var(--spacing-15) 0;
+}
+
 .status-box {
     display: flex;
     align-items: center;
-    gap: 0 var(--spacing-10);
+    gap: var(--spacing-10);
 }
 
 .status-icon img {
